--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ jinja2==3.1.6
 Wikipedia-API==0.8.1
 beautifulsoup4==4.13.4
 pydantic==2.11.5
+openai==0.26.5
+anthropic==0.52.1
+forecasting-tools==0.2.40
